// compile with:
// protoc --go_out=. --go_opt=paths=source_relative *.proto
syntax="proto3";

option go_package = "github.com/packetflinger/libq2/proto";

package proto;

message Block {
    ServerData serverdata = 1;
}

message ServerData {
    BaseStrings basestrings = 1;
}

message BaseStrings {
    repeated ConfigString configstring = 1;
}

message ConfigString {
    uint64 index = 1;
    string str = 2;
}

message MVDTextDemo {
    repeated Block block = 1;
}